Add application deploy to delete